REseted default styling (solved padding issue) & creted footer grid for proper <a> spacing

--- a/google-mainpage-project/style.css
+++ b/google-mainpage-project/style.css
@@ -13,6 +13,10 @@ a {
 a:hover {
     text-decoration: underline;
 }
+.picture-icon {
+    width: 48px;
+    height: 48px;
+}
 .picture-icon:hover {
     opacity: 1;
     background-color: rgba(60, 64, 67, 0.08);
@@ -21,11 +25,6 @@ a:hover {
 }
 .english {
     color: #1a0dab;
-}
-svg {
-    height: 100%;
-    width: 100%;
-    fill: currentColor;
 }
 .wrapper {
     display: flex;
@@ -40,7 +39,7 @@ svg {
 }
 .header-content {
     min-width: 250px;
-    background-position: -64px -29px;
+    /*background-position: -64px -29px;*/
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -50,7 +49,24 @@ svg {
     width: 24px;
 }
 .profile-picture {
+    height: 32px;
+    width: auto;
     border-radius: 50%;
+}
+.picture-icon {
+    width: 48px;
+    height: 48px;
+}
+.picture-icon:hover {
+    opacity: 1;
+    background-color: rgba(60, 64, 67, 0.08);
+    outline: none;
+    border-radius: 50%;
+}
+svg {
+    height: 100%;
+    width: 100%;
+    fill: currentColor;
 }
 .content {
     display: flex;
@@ -143,8 +159,12 @@ svg {
     flex-wrap: wrap;
     font-size: 14px;
     background-color: #f2f2f2;
-
 }
 .footer-links a {
     color: #70757a;
+}
+.fl-links {
+    display: grid;
+    grid-template-columns: repeat(4,auto);
+    grid-gap: 15px;
 }
